--- a/src/components/FilterBar.astro
+++ b/src/components/FilterBar.astro
@@ -28,9 +28,14 @@ const {
 const cssRules = items
     .map(
         (item) => `
-    #${containerId}:has(.filter-button input[value="${item.value}"]:checked) .${itemClass}[${dataAttribute}="${item.value}"],
-    #${containerId}:has(.filter-button input[value="${item.value}"]:checked) .filter-description[data-value="${item.value}"] {
-        display: flex;
+    #${containerId}:has(.filter-button input[value="${item.value}"]:checked) {
+        .${itemClass}[${dataAttribute}~="${item.value}"],
+        .filter-description[data-value="${item.value}"] {
+            display: flex;
+        }
+        .filter-text-primary[data-value="${item.value}"] {
+            color: var(--color-primary);
+        }
     }`,
     )
     .join("\n");
@@ -77,7 +82,11 @@ const scriptContent = `
                                 name="filter"
                                 value={item.value}
                                 class="sr-only"
-                                aria-labelledby={`filter-${item.value}-label`}
+                                {...(item.description
+                                    ? {
+                                          "aria-labelledby": `filter-${item.value}-label`,
+                                      }
+                                    : {})}
                             />
                             {IconComponent && (
                                 <IconComponent class="inline-block size-4" />
@@ -109,5 +118,4 @@ const scriptContent = `
 }
 
 <style set:html={fullStyle}></style>
-
-<script set:html={scriptContent} />
+<script is:inline set:html={scriptContent} />
