--- a/src/pages/posts/[...slug].astro
+++ b/src/pages/posts/[...slug].astro
@@ -158,9 +158,8 @@ const feeds = currentNode.isFolder
         <div class="flex flex-col gap-2">
             <div class="flex flex-row items-center gap-1" data-pagefind-ignore>
                 <KindIcon
-                    kind={currentNode.data?.kind}
-                    isFolder={currentNode.isFolder}
-                    class="h-4 w-4 stroke-dark-gray"
+                    kind={currentNode.data?.kind ?? "folder"}
+                    class="size-4 stroke-dark-gray"
                 />
                 <Breadcrumbs
                     baseUrl="/posts"
