--- a/src/components/PostListing.astro
+++ b/src/components/PostListing.astro
@@ -2,11 +2,13 @@
 import Thoughts from "@lucide/astro/icons/cloud";
 import Notebook from "@lucide/astro/icons/notebook";
 import Orbit from "@lucide/astro/icons/orbit";
+import dayjs from "dayjs";
 import { capitalize } from "es-toolkit";
 import { type HierarchicalBlogNode } from "../blogIndex";
 import Breadcrumbs from "./Breadcrumbs.astro";
 import FilterBar, { type FilterItem } from "./FilterBar.astro";
 import KindIcon from "./KindIcon.astro";
+import PostDates from "./PostDates.astro";
 import PostItem, { type PostItemData } from "./PostItem.astro";
 
 interface Props {
@@ -101,6 +103,11 @@ const filterItems: FilterItem[] = kinds.map((kind) => ({
                                 />
                             )}
                         </div>
+                        <PostDates
+                            slot="bottom-row"
+                            createdTime={dayjs(node.data?.published)}
+                            lastModified={dayjs(node.data?.published)}
+                        />
                     </PostItem>
                 );
             })
